# Vulkan_Test

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: shader.frag.spv  shader.vert.spv
android/app/src/main/cpp/: CMakeLists.txt  main.cpp
android/app/src/main/java/com/example/vulkan_test/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
include/: Await.hpp  Command.hpp  Debug.hpp  Depth.hpp  Device.hpp  FrameBuffer.hpp  Glfw.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderPass.hpp  ShaderData.hpp  Subpass.hpp  Surface.hpp  Swapchain.hpp  Texture.hpp  Utility.hpp
mac/: CMakeLists.txt
src/: Main.cpp  Main_Old2.cpp  Utility.hpp  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
ubuntu/: CMakeLists.txt
win/: CMakeLists.txt
